frontend/src/index.css
body {
  margin: 0;
  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
    sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

code {
  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
    monospace;
}

.title-headings{
  text-align: center;
  font-size: 2rem;
  color: rebeccapurple;
}

.text{
  font-size: 0.8rem;
  text-align: center;
  color: #eb423d;
}

.headings{
  text-transform: uppercase;
}

li{
  list-style: none;
  
}

a{
  text-decoration: none;
}


/*Home Page Product*/
.row {
  display: flex;
  flex-wrap: wrap;
  justify-content: space-between;
  gap: 10px;

}

.price {
  color: blueviolet;
  font-size: 1rem;
}

.card-body {
  width: 30%;
}

.image-box {
  overflow: hidden;
  margin: auto;
  position: relative;
  object-fit: cover;
  transition: all 0.6s;
}

.card-images {
  width: 80%;
  transition: transform 0.6s;
}

.card-images:hover {
  transform: scale(1.4);
}

.add-to-cart {
  border: solid green;
  border-radius: 13px;
  background-color: green;
  color: aliceblue;
  width: 45%;
  position: absolute;
  top: 30px;
  left: 60px;
  opacity: 0;
  transition: opacity 0.6s;
}

.image-box:hover .add-to-cart {
  opacity: 1;
}

/*Home Page Category*/
.collections-row{
  display: grid;
  grid-template-rows: repeat(3, 1fr);
  grid-template-columns: repeat(3, 1fr);
  gap: 20px;
 
  
}

.collection-images{
  width: 100%;
}

/*HomePage Location*/
.location-images{
  max-width: 500px;
}

.location-box{
  max-width: 400px;
  border: blueviolet solid;
  text-align: center;
}

/*Navigation Bar*/
nav ul{
  display: flex;
  justify-content: space-around;
  align-items: center;
  background-color: brown;
  flex-wrap: wrap;
  padding-left: 0;
  
}

nav a{
  color: aliceblue;
}

nav li{
  margin-left: 20px;
}
.sub-menu{
  display: none;
}
.menu{
  display: flex;
  justify-content: space-between;
}
.menu-icons{
  display: flex;
  justify-content: space-between;
}
.logo-nav img{ 
  background-color: blueviolet;
  width: 100%;
  }

  .logo-nav {
    width: 100px;
    min-height: 45px;
    object-fit: cover;
    margin: 0px;

  }

